# aimmh

./: .gitignore  CLAUDE.md  DEEP_SCAN_SUGGESTIONS.md  LICENSE  README.md  a0_validation_test.py  backend_pricing_test.py  backend_test.py  backend_validation_test.py  cookie_auth_test_results.md  detailed_checkout_test.py  frontend_pricing_comprehensive_test.py  frontend_pricing_html_test.py  frontend_pricing_test.py  pyproject.toml  service_account_auth_test.py  service_account_auth_test.py.part01.txt  service_account_auth_test.py.part02.txt  test_result.md  test_result_part1.md  test_result_part2.md  test_result_part3.md
.emergent/: emergent.yml  summary.txt
.github/: FUNDING.yml
.github/workflows/: android-store-release.yml  line-length-guard.yml  publish-pypi.yml
aimmh_lib/: __init__.py  adapters.py  conversations.py  conversations.py.part01.txt  conversations.py.part02.txt
backend/: .env  a0_api_reference.md  config.py  db.py  server.py
backend/models/: __init__.py  agent_zero.py  auth.py  chat.py  context.py  edcm.py  hub.py  hub_chat.py  hub_state.py  hub_synthesis.py  lib_models.py  payments.py  payments_v2.py  registry.py  v1.py  ws_admin.py
backend/routes/: __init__.py  agent_zero.py  agent_zero.py.part01.txt  agent_zero.py.part02.txt  auth.py  auth.py.part01.txt  auth.py.part02.txt  chat.py  chat.py.part01.txt  chat.py.part02.txt  chat.py.part03.txt  console.py  edcm.py  export.py  keys.py  payments.py  payments.py.part01.txt  payments.py.part02.txt  payments_v2.py  payments_v2.py.part01.txt  payments_v2.py.part02.txt  registry.py  v1_a0.py  v1_a0.py.part01.txt  v1_a0.py.part02.txt  v1_a0.py.part03.txt  v1_analysis.py  v1_edcm.py  v1_hub.py  v1_hub.py.part01.txt  v1_hub.py.part02.txt  (+6 more)
frontend/: .env  .gitignore  capacitor.config.bundled.ts  capacitor.config.webview.ts  package.json
lib/: __init__.py  adapters.py  conversations.py
memory/: PRD.md  test_credentials.md
scripts/: check_max_lines.py
test_reports/: iteration_10.json  iteration_11.json  iteration_12.json  iteration_13.json  iteration_14.json  iteration_15.json  iteration_16.json  iteration_17.json  iteration_18.json  iteration_19.json  iteration_2.json  iteration_20.json  iteration_21.json  iteration_22.json  iteration_23.json  iteration_24.json  iteration_25.json  iteration_26.json  iteration_27.json  iteration_28.json  iteration_29.json  iteration_3.json  iteration_30.json  iteration_31.json  iteration_32.json  iteration_33.json  iteration_34.json  iteration_4.json  iteration_5.json  iteration_6.json  iteration_7.json  iteration_8.json  iteration_9.json
(+229 files in other folders)
