[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aimmh-lib"
version = "1.0.0"
description = "Async multi-model conversation orchestration patterns (fan_out, daisy_chain, room_all, room_synthesized, council, roleplay)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "multi-model", "async", "conversation", "orchestration"]
dependencies = []  # pure stdlib + asyncio; zero runtime deps for the core lib
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
# Install these to use aimmh_lib.adapters.make_call_fn with the aimmh backend
backend = [
    "emergentintegrations",
    "fastapi",
    "motor",
]
# Install these to build and publish
dev = [
    "build",
    "twine",
]

[project.urls]
Homepage = "https://emergentapp.interdependentway.org"
Repository = "https://github.com/erinepshovel-code/aimmh"
"Bug Tracker" = "https://github.com/erinepshovel-code/aimmh/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aimmh_lib*"]
exclude = ["backend*", "frontend*"]

[tool.setuptools]
license-files = ["LICENSE"]
